# Memo

./: .gitignore  Cargo.toml  config.json  index.html  readme.md  version.txt
html/: index.html
installer/: install.bat  version.txt
src/: main.rs  updater.rs
src/language/: en.rs  kr.rs  mod.rs
